welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:4: error: '(' expected but identifier found.
}while getCouleurSol()==yellow 
       ^